--- a/app/src/main/res/layout/fragment_user_goal.xml
+++ b/app/src/main/res/layout/fragment_user_goal.xml
@@ -63,6 +63,7 @@
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/rb_fat"
+                style="@style/RadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -70,6 +71,7 @@
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/rb_maintain"
+                style="@style/RadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -77,6 +79,7 @@
 
             <com.google.android.material.radiobutton.MaterialRadioButton
                 android:id="@+id/rb_build"
+                style="@style/RadioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -111,6 +114,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="24dp"
             android:text="@string/next"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
