--- a/app/src/main/res/layout/diamond_home_dialog.xml
+++ b/app/src/main/res/layout/diamond_home_dialog.xml
@@ -11,6 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Which one you prefer? Tell us!"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_diamond" />
+
+    <ImageView
+        android:id="@+id/img_diamond"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:src="@drawable/im_diamond"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
